--- a/public/service_down.html
+++ b/public/service_down.html
@@ -1,11 +1,21 @@
-<!doctype html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="robots" content="noindex" />
-  <title>Underhåll av tjänsten pågår</title>
-</head>
-<body>
-  <h1>Underhåll av tjänsten pågår</h1>
-  <p>Välkommen tillbaks om en liten stund</p>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'/>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'/>
+    <meta content='noindex, nofollow' name='robots'/>
+    <title>Äldreboenden</title>
+    <style>
+      body { font-family: georgia; text-align: center; }
+      h1 { font-weight: normal; font-size: 3.8em; }
+      p, li { font-size: 1.6em; line-height: 1.5; }
+      p { margin-bottom: 2em; }
+      ul, li { list-style: none; margin: 0; padding: 0; }
+      a { color: #007133; text-decoration: none; }
+    </style>
+  </head>
+  <body>
+    <h1>Underhållsarbete pågår</h1>
+    <p>Välkommen åter om en liten stund</p>
+  </body>
 </html>
